--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
 	<title>My Web Page</title>
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
@@ -36,3 +37,4 @@ Some of my hobbies include:<br>
 <img class="nes-dialog" src="https://images.performgroup.com/di/library/omnisport/45/8f/gianluigibuffon-cropped_1tduj0fd66l7s18htcozmbzbzf.jpg?t=1434072570&w=1200&h=630" alt="Gianluigi Buffon"  width="400" height="200"/>
 </body>
 <footer class="nes-balloon">Brilant Baci - bb89079n@pace.edu</footer>
+</html>
